<resources>
    <string name="app_name">SagCalculator</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="n0">0</string>




    <string name="result">Result</string>
    <string name="del">DEL</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="eq">=</string>
    <string name="dot">.</string>
</resources>
